--- a/news
+++ b/news
@@ -1,47 +1,47 @@
 [
-  {
-    "id":1,
-    "imageUrl":"https://i.pinimg.com/originals/26/ce/ca/26ceca884c175163ee4255e851c7723a.jpg",
-    "title":"Yoga rất tốt cho cuộc sống",
-    "author":"Anh Tú",
-    "desc":"Yoga rất tốt cho cuộc sống",
-    "dateTime":"20/11/2020",
-    "url":"facebook.com",
-    "content":"Yoga, hay còn gọi là Du-già, là một họ các phương pháp luyện tâm và luyện thân cổ xưa bắt nguồn từ Ấn Độ",
-    "image":"https://wallpapershome.com/images/wallpapers/yoga-1080x1920-beach-sea-blue-sky-10413.jpg",
-    "imageContent":"https://wallpapercave.com/wp/wp3157176.jpg",
-    "heading1":"Yoga là gì?",
-    "content2":"Yoga, hay còn gọi là Du-già, là một họ các phương pháp luyện tâm và luyện thân cổ xưa bắt nguồn từ Ấn Độ, Yoga, hay còn gọi là Du-già, là một họ các phương pháp luyện tâm và luyện thân cổ xưa bắt nguồn từ Ấn Độ",
-    "heading2":"Yoga và những điều cần lưu ý",
-  },
-  {
-    "id":2,
-    "imageUrl":"https://www.desktopbackground.org/download/540x960/2013/07/18/609316_14-yoga-hd-wallpapers_1680x1050_h.jpg",
-    "title":"Yoga rất thú vị",
-    "author":"Anh Tú",
-    "desc":"Yoga rất tốt cho cuộc sống",
-    "dateTime":"20/11/2020",
-    "url":"facebook.com",
-    "content":"Yoga, hay còn gọi là Du-già, là một họ các phương pháp luyện tâm và luyện thân cổ xưa bắt nguồn từ Ấn Độ",
-    "image":"https://wallpapershome.com/images/wallpapers/yoga-1080x1920-beach-sea-blue-sky-10413.jpg",
-    "imageContent":"https://wallpapercave.com/wp/wp3157176.jpg",
-    "heading1":"Yoga là gì?",
-    "content2":"Yoga, hay còn gọi là Du-già, là một họ các phương pháp luyện tâm và luyện thân cổ xưa bắt nguồn từ Ấn Độ, Yoga, hay còn gọi là Du-già, là một họ các phương pháp luyện tâm và luyện thân cổ xưa bắt nguồn từ Ấn Độ",
-    "heading2":"Yoga và những điều cần lưu ý",
-  },
-  {
-    "id":3,
-    "imageUrl":"https://www.desktopbackground.org/download/360x640/2013/12/26/691605_yoga-wallpaper_1166x774_h.jpg",
-    "title":"Những điều cần biết khi tập Yoga",
-    "author":"Anh Tú",
-    "desc":"Yoga rất tốt cho cuộc sống",
-    "dateTime":"20/11/2020",
-    "url":"facebook.com",
-    "content":"Yoga, hay còn gọi là Du-già, là một họ các phương pháp luyện tâm và luyện thân cổ xưa bắt nguồn từ Ấn Độ",
-    "image":"https://wallpapershome.com/images/wallpapers/yoga-1080x1920-beach-sea-blue-sky-10413.jpg",
-    "imageContent":"https://wallpapercave.com/wp/wp3157176.jpg",
-    "heading1":"Yoga là gì?",
-    "content2":"Yoga, hay còn gọi là Du-già, là một họ các phương pháp luyện tâm và luyện thân cổ xưa bắt nguồn từ Ấn Độ, Yoga, hay còn gọi là Du-già, là một họ các phương pháp luyện tâm và luyện thân cổ xưa bắt nguồn từ Ấn Độ",
-    "heading2":"Yoga và những điều cần lưu ý",
-  },
+   {
+      "id":1,
+      "imageUrl":"https://i.pinimg.com/originals/26/ce/ca/26ceca884c175163ee4255e851c7723a.jpg",
+      "title":"Yoga rất tốt cho cuộc sống",
+      "author":"Anh Tú",
+      "desc":"Yoga rất tốt cho cuộc sống",
+      "dateTime":"20/11/2020",
+      "url":"facebook.com",
+      "content":"Yoga, hay còn gọi là Du-già, là một họ các phương pháp luyện tâm và luyện thân cổ xưa bắt nguồn từ Ấn Độ",
+      "image":"https://wallpapershome.com/images/wallpapers/yoga-1080x1920-beach-sea-blue-sky-10413.jpg",
+      "imageContent":"https://wallpapercave.com/wp/wp3157176.jpg",
+      "heading1":"Yoga là gì?",
+      "content2":"Yoga, hay còn gọi là Du-già, là một họ các phương pháp luyện tâm và luyện thân cổ xưa bắt nguồn từ Ấn Độ, Yoga, hay còn gọi là Du-già, là một họ các phương pháp luyện tâm và luyện thân cổ xưa bắt nguồn từ Ấn Độ",
+      "heading2":"Yoga và những điều cần lưu ý"
+   },
+   {
+      "id":1,
+      "imageUrl":"https://www.desktopbackground.org/download/540x960/2013/07/18/609316_14-yoga-hd-wallpapers_1680x1050_h.jpg",
+      "title":"Yoga rất thú vị",
+      "author":"Anh Tú",
+      "desc":"Yoga rất tốt cho cuộc sống",
+      "dateTime":"20/11/2020",
+      "url":"facebook.com",
+      "content":"Yoga, hay còn gọi là Du-già, là một họ các phương pháp luyện tâm và luyện thân cổ xưa bắt nguồn từ Ấn Độ",
+      "image":"https://wallpapershome.com/images/wallpapers/yoga-1080x1920-beach-sea-blue-sky-10413.jpg",
+      "imageContent":"https://wallpapercave.com/wp/wp3157176.jpg",
+      "heading1":"Yoga là gì?",
+      "content2":"Yoga, hay còn gọi là Du-già, là một họ các phương pháp luyện tâm và luyện thân cổ xưa bắt nguồn từ Ấn Độ, Yoga, hay còn gọi là Du-già, là một họ các phương pháp luyện tâm và luyện thân cổ xưa bắt nguồn từ Ấn Độ",
+      "heading2":"Yoga và những điều cần lưu ý"
+   },
+   {
+      "id":1,
+      "imageUrl":"https://www.desktopbackground.org/download/360x640/2013/12/26/691605_yoga-wallpaper_1166x774_h.jpg",
+      "title":"Những điều cần biết khi tập Yoga",
+      "author":"Anh Tú",
+      "desc":"Yoga rất tốt cho cuộc sống",
+      "dateTime":"20/11/2020",
+      "url":"facebook.com",
+      "content":"Yoga, hay còn gọi là Du-già, là một họ các phương pháp luyện tâm và luyện thân cổ xưa bắt nguồn từ Ấn Độ",
+      "image":"https://wallpapershome.com/images/wallpapers/yoga-1080x1920-beach-sea-blue-sky-10413.jpg",
+      "imageContent":"https://wallpapercave.com/wp/wp3157176.jpg",
+      "heading1":"Yoga là gì?",
+      "content2":"Yoga, hay còn gọi là Du-già, là một họ các phương pháp luyện tâm và luyện thân cổ xưa bắt nguồn từ Ấn Độ, Yoga, hay còn gọi là Du-già, là một họ các phương pháp luyện tâm và luyện thân cổ xưa bắt nguồn từ Ấn Độ",
+      "heading2":"Yoga và những điều cần lưu ý"
+   }
 ]
